--- a/www/index.html
+++ b/www/index.html
@@ -36,11 +36,11 @@
       padding: 20px 10px 0px 10px;
   }
   </style>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-          <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-          <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+      <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
+          <script src="js/jquery-1.11.3.min.js"></script>
+          <script src="js/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; line-height: 28.0px; font: 24.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Hello</b></span></h1>
